# VkBeraEngine

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  README.md  build.bat  build.sh  change.sh  envWindowsExample.cmake  first_app.cpp  first_app.h  main.cpp
include/engine/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Core.h  DescriptorSetLayout.h  Descriptors.h  Device.h  FrameInfo.h  GameObject.h  GameObjectFactory.h  ImGuiManager.cpp  ImGuiManager.h  KeyboardMovementController.h  MainLoop.h  Model.h  MousePicker.h  Pipeline.h  RenderSystem.h  Renderer.h  Scene.h  SwapChain.h  Texture.cpp  Texture.h  TextureStorage.h  Utils.h  Window.h
include/engine/ecs/: Entity.h  EntityManager.h  IComponent.h  TestComponent.h
include/engine/exception/: Exception.h
include/engine/exception/window/: UnableToInitGLFWException.h  UnableToStartWindowException.cpp  UnableToStartWindowException.h
include/engine/exceptions/: Exception.h
include/engine/exceptions/file/: FailedToLoadFileException.h  UnableToOpenFile.h  UnableToOpenFileException.h
include/engine/exceptions/vulkan/: FailedToBindVkObject.h  FailedToCreatePipeLineLayoutException.h  FailedToCreateRenderPassException.h  FailedToCreateShaderModule.h  FailedToCreateShaderModuleException.h  FailedToCreateVkObject.h  (+9 more)
include/engine/systems/: GuiSystem.h  PointLightSystem.h  RenderSystem.h
include/game/components/: GameObjectComponent.h  HealthComponent.h  KeyboardInputComponent.h
include/game/entities/: Enemy.h  Player.h  Test.h
include/libs/: json.h  stb_image.h  stb_image_write.h  tiny_gltf.cpp  tiny_gltf.h  tiny_obj_loader.h
include/libs/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
json/: game_state.json  test.json
models/: Hellknight_LATEST.mtl  free_car_001.mtl
models/gltf/: license.txt  scene.gltf
shaders/: .gitignore  compile.sh  gui_shader.vert  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: MainLoop.cpp
src/engine/: Buffer.cpp  Camera.cpp  DescriptorSetLayout.cpp  Descriptors.cpp  Device.cpp  GameObject.cpp  ImGuiManager.cpp  KeyboardMovementController.cpp  MainLoop.cpp  Model.cpp  MousePicker.cpp  Pipeline.cpp  RenderSystem.cpp  Renderer.cpp  Scene.cpp  SwapChain.cpp  Texture.cpp  TextureStorage.cpp  Window.cpp
src/engine/ecs/: Entity.cpp  EntityManager.cpp
src/engine/exception/: Exception.cpp
src/engine/exceptions/: Exception.cpp
src/engine/systems/: GuiSystem.cpp  PointLightSystem.cpp  RenderSystem.cpp
src/game/components/: KeyboardInputComponent.cpp
src/game/entities/: Player.cpp
test_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  MiniminiMotorways  MiniminiMotorways_TEST[1]_include.cmake  cmake_install.cmake
test_build/Testing/Temporary/: CTestCostData.txt
tests/: CMakeLists.txt  test.cpp  utils.h
tests/lib/: CONTRIBUTING.md  README.md
(+22 files in other folders)
